--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="io.bloc.android.blocly">
 
-    <application android:allowBackup="true" android:label="@string/app_name"
+    <!--<application android:allowBackup="true"-->
+    <application android:name=".BloclyApplication"
+        android:allowBackup="true"
+        android:label="@string/app_name"
         android:icon="@mipmap/ic_launcher" android:theme="@style/AppTheme">
 
         <activity android:name=".ui.activity.BloclyActivity">
